Fix toggle password visibility layout

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -34,7 +34,7 @@
     display: block;
     position: absolute;
     right: 0;
-    bottom: 135px;
+    bottom: 130px;
 
     width: 22px;
     height: 22px;
